Шел какой-то день разработки, мы получали удовольствие как могли
