# internal/server/api/v1/tag.go
@@ -49,8 +49,19 @@ func CreateTag(g *gin.Context) {
 	if err != nil {
 		g.JSON(http.StatusInternalServerError, err)
 	}
+	g.JSON(http.StatusOK, "")
 }
 
+// DeleteTag  godoc
+// @Summary     Delete tag with provided id
+// @Tags        Tag
+// @Accept      json
+// @Produce     json
+// @Param       id query uuid.UUID true "tag id"
+// @Success     200
+// @Error       500 {string} string
+// @Error       404 {string} string
+// @Router      /tag/ [delete]
 func DeleteTag(g *gin.Context) {
 
 	var params models.DeleteTag
@@ -64,8 +75,21 @@ func DeleteTag(g *gin.Context) {
 	if err != nil {
 		g.JSON(http.StatusInternalServerError, err)
 	}
+	g.JSON(http.StatusOK, "")
 }
 
+// UpdateTag  godoc
+// @Summary     update tag with provided id
+// @Tags        Tag
+// @Accept      json
+// @Produce     json
+// @Param       id query uuid.UUID true "tag id"
+// @Param       name query string false "tag name"
+// @Param       color query string false "tag color"
+// @Success     200
+// @Error       500 {string} string
+// @Error       404 {string} string
+// @Router      /tag/ [put]
 func UpdateTag(g *gin.Context) {
 
 	var params models.UpdateTag
@@ -79,8 +103,32 @@ func UpdateTag(g *gin.Context) {
 	if err != nil {
 		g.JSON(http.StatusInternalServerError, err)
 	}
+	g.JSON(http.StatusOK, "")
 }
 
+// GetTagsByTask godoc
+// @Summary      get tags which contains task by provided id
+// @Tags         Tag
+// @Accept       json
+// @Produce      json
+// @Param        id query uuid.UUID true "tag id"
+// @Success      200 {array} models.Tag
+// @Error        500 {string} string
+// @Error        404 {string} string
+// @Router       /tag/task [get]
 func GetTagsByTask(g *gin.Context) {
 
+	var params models.TagsByTask
+	err := g.BindQuery(&params)
+	if err != nil {
+		g.JSON(http.StatusInternalServerError, err)
+	}
+
+	db := sql.GetDb()
+	data, err := db.GetTagsByTask(params)
+	if err != nil {
+		g.JSON(http.StatusInternalServerError, err)
+	}
+
+	g.JSON(http.StatusOK, data)
 }
